changed identifiers and description of tcr

--- a/data/tcr_epitope_binding/example_processing_and_templates.ipynb
+++ b/data/tcr_epitope_binding/example_processing_and_templates.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "cf59e3e9-8061-4022-9eae-e978311b4155",
    "metadata": {
     "tags": []
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "7bb8eb5e-f513-40d2-a68c-7cda1a51ad31",
    "metadata": {
     "tags": []
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "b39a142e-ccbc-49d2-98b0-a5f9bde9fd27",
    "metadata": {
     "tags": []
@@ -79,7 +79,7 @@
      "output_type": "stream",
      "text": [
       "Downloading...\n",
-      "100%|████████████████████████████████████████████████| 16.0M/16.0M [00:02<00:00, 5.98MiB/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████████████████████████| 16.0M/16.0M [00:02<00:00, 5.75MiB/s]\n",
       "Loading...\n",
       "Done!\n"
      ]
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "26d9f62a-07f5-4113-8161-d5dfcf0bfb71",
    "metadata": {
     "tags": []
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "43873fc3-20a8-487d-a7c5-33bd58414159",
    "metadata": {
     "tags": []
@@ -114,11 +114,11 @@
      "output_type": "stream",
      "text": [
       "total 30672\r\n",
-      "drwxr-xr-x  3 cody  staff    96B Mar  4 10:09 \u001b[34mdata\u001b[m\u001b[m\r\n",
-      "-rw-r--r--  1 cody  staff    15M Mar  4 10:10 data_original.csv\r\n",
-      "-rw-r--r--  1 cody  staff    45K Mar  4 10:06 example_processing_and_templates.ipynb\r\n",
-      "-rw-r--r--@ 1 cody  staff   1.5K Mar  4 10:05 meta.yaml\r\n",
-      "-rw-r--r--@ 1 cody  staff   4.8K Mar  4 10:05 transform.py\r\n"
+      "drwxr-xr-x  3 cody  staff    96B Mar  4 11:11 \u001b[34mdata\u001b[m\u001b[m\r\n",
+      "-rw-r--r--  1 cody  staff    15M Mar  4 11:11 data_original.csv\r\n",
+      "-rw-r--r--  1 cody  staff    46K Mar  4 10:13 example_processing_and_templates.ipynb\r\n",
+      "-rw-r--r--@ 1 cody  staff   1.5K Mar  4 10:10 meta.yaml\r\n",
+      "-rw-r--r--@ 1 cody  staff   4.8K Mar  4 11:10 transform.py\r\n"
      ]
     }
    ],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "77f614e7-b133-40bc-8759-2d930e4c120e",
    "metadata": {
     "tags": []
@@ -943,12 +943,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "d3890961-444e-4a26-b8fc-ed8c4e959af9",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 51\u001b[0m\n\u001b[1;32m      1\u001b[0m meta \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtcr_epitope_binding\u001b[39m\u001b[38;5;124m\"\u001b[39m,  \u001b[38;5;66;03m# unique identifier, we will also use this for directory names\u001b[39;00m\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdescription\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\"\"\u001b[39m\u001b[38;5;124mT-cells are an integral part of the adaptive immune system, whose survival, proliferation, activation\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;124m    and function are all governed by the interaction of their T-cell receptor (TCR) with immunogenic peptides (epitopes).\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;124m    A large repertoire of T-cell receptors with different specificity is needed to provide protection against a wide range of pathogens.\u001b[39m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;124m    This new task aims to predict the binding affinity given a pair of TCR sequence and epitope sequence.\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m,\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtargets\u001b[39m\u001b[38;5;124m\"\u001b[39m: [\n\u001b[1;32m      8\u001b[0m         {\n\u001b[1;32m      9\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbinding\u001b[39m\u001b[38;5;124m\"\u001b[39m,  \u001b[38;5;66;03m# name of the column in a tabular dataset\u001b[39;00m\n\u001b[1;32m     10\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdescription\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTCR epitope binding.\u001b[39m\u001b[38;5;124m\"\u001b[39m,  \u001b[38;5;66;03m# description of what this column means\u001b[39;00m\n\u001b[1;32m     11\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124munits\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m,  \u001b[38;5;66;03m# units of the values in this column (leave empty if unitless)\u001b[39;00m\n\u001b[1;32m     12\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtype\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbinary classification\u001b[39m\u001b[38;5;124m\"\u001b[39m,  \u001b[38;5;66;03m# can be \"categorical\", \"ordinal\", \"continuous\"\u001b[39;00m\n\u001b[1;32m     13\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnames\u001b[39m\u001b[38;5;124m\"\u001b[39m: [  \u001b[38;5;66;03m# names for the property (to sample from for building the prompts)\u001b[39;00m\n\u001b[1;32m     14\u001b[0m                 \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtcr binding affinity\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     15\u001b[0m                 \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbinding affinity\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     16\u001b[0m                 \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbinding\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     17\u001b[0m \n\u001b[1;32m     18\u001b[0m             ],\n\u001b[1;32m     19\u001b[0m         },\n\u001b[1;32m     20\u001b[0m     ],\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124midentifiers\u001b[39m\u001b[38;5;124m\"\u001b[39m: [\n\u001b[1;32m     22\u001b[0m         {\n\u001b[1;32m     23\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mepitope_smiles\u001b[39m\u001b[38;5;124m\"\u001b[39m,  \u001b[38;5;66;03m# column name\u001b[39;00m\n\u001b[1;32m     24\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtype\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSMILES\u001b[39m\u001b[38;5;124m\"\u001b[39m,  \u001b[38;5;66;03m# can be \"SMILES\", \"SELFIES\", \"IUPAC\", \"OTHER\"\u001b[39;00m\n\u001b[1;32m     25\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdescription\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mepitope smiles \u001b[39m\u001b[38;5;124m\"\u001b[39m,  \u001b[38;5;66;03m# description (optional, except for \"OTHER\")\u001b[39;00m\n\u001b[1;32m     26\u001b[0m         },\n\u001b[1;32m     27\u001b[0m         {\n\u001b[1;32m     28\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mepitope_aa\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     29\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtype\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mamino acid\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     30\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdescription\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mepitope amino acid sequence\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     31\u001b[0m \n\u001b[1;32m     32\u001b[0m         },\n\u001b[1;32m     33\u001b[0m         {\n\u001b[1;32m     34\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtcr_full\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     35\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtype\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mamino acid\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     36\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdescription\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtcr amino acid sequence\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     37\u001b[0m \n\u001b[1;32m     38\u001b[0m         },\n\u001b[1;32m     39\u001b[0m     ],\n\u001b[1;32m     40\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlicense\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCC BY 4.0\u001b[39m\u001b[38;5;124m\"\u001b[39m,  \u001b[38;5;66;03m# license under which the original dataset was published\u001b[39;00m\n\u001b[1;32m     41\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlinks\u001b[39m\u001b[38;5;124m\"\u001b[39m: [  \u001b[38;5;66;03m# list of relevant links (original dataset, other uses, etc.)\u001b[39;00m\n\u001b[1;32m     42\u001b[0m         {\n\u001b[1;32m     43\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124murl\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://tdcommons.ai/multi_pred_tasks/tcrepitope/\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     44\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdescription\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moriginal data set link\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     45\u001b[0m         },\n\u001b[1;32m     46\u001b[0m         {\n\u001b[1;32m     47\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124murl\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://doi.org/10.1093/bioinformatics/btab294\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     48\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdescription\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcorresponding publication\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     49\u001b[0m         },\n\u001b[1;32m     50\u001b[0m     ],\n\u001b[0;32m---> 51\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnum_points\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;28mlen\u001b[39m(\u001b[43mdf\u001b[49m),  \u001b[38;5;66;03m# number of datapoints in this dataset\u001b[39;00m\n\u001b[1;32m     52\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbibtex\u001b[39m\u001b[38;5;124m\"\u001b[39m: [\n\u001b[1;32m     53\u001b[0m \u001b[38;5;250m        \u001b[39m\u001b[38;5;124;03m\"\"\"@article{weber2021titan,\u001b[39;00m\n\u001b[1;32m     54\u001b[0m \u001b[38;5;124;03m        title={TITAN: T-cell receptor specificity prediction with bimodal attention network},\u001b[39;00m\n\u001b[1;32m     55\u001b[0m \u001b[38;5;124;03m        author={Weber Anna,Born Janis, Martinez Maria Rodriguez},\u001b[39;00m\n\u001b[1;32m     56\u001b[0m \u001b[38;5;124;03m        journal={Bioinformatics},\u001b[39;00m\n\u001b[1;32m     57\u001b[0m \u001b[38;5;124;03m        volume={56},\u001b[39;00m\n\u001b[1;32m     58\u001b[0m \u001b[38;5;124;03m        number={4},\u001b[39;00m\n\u001b[1;32m     59\u001b[0m \u001b[38;5;124;03m        pages={i237-i234},\u001b[39;00m\n\u001b[1;32m     60\u001b[0m \u001b[38;5;124;03m        year={2021},\u001b[39;00m\n\u001b[1;32m     61\u001b[0m \u001b[38;5;124;03m        publisher={Oxford Academic}\u001b[39;00m\n\u001b[1;32m     62\u001b[0m \u001b[38;5;124;03m        }\"\"\"\u001b[39;00m,\n\u001b[1;32m     63\u001b[0m     ],\n\u001b[1;32m     64\u001b[0m }\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "meta = {\n",
     "    \"name\": \"tcr_epitope_binding\",  # unique identifier, we will also use this for directory names\n",
@@ -983,7 +995,7 @@
     "\n",
     "        },\n",
     "        {\n",
-    "            \"id\": \"tcr_aa\",\n",
+    "            \"id\": \"tcr_full\",\n",
     "            \"type\": \"amino acid\",\n",
     "            \"description\": \"tcr amino acid sequence\",\n",
     "\n",
