remove notebook workings

--- a/notebooks/example.ipynb
+++ b/notebooks/example.ipynb
@@ -4,242 +4,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.8.10 64-bit' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
-   "source": [
-    "from datasets import load_dataset\n",
-    "\n",
-    "from transformers import GPTNeoXForCausalLM, AutoTokenizer\n",
-    "\n",
-    "from torch.utils.data import DataLoader\n",
-    "from transformers import DataCollatorForLanguageModeling\n",
-    "from transformers import Trainer, TrainingArguments\n",
-    "\n",
-    "\n",
-    "from peft import (\n",
-    "    get_peft_config,\n",
-    "    get_peft_model,\n",
-    "    PromptTuningInit,\n",
-    "    PromptTuningConfig,\n",
-    "    TaskType,\n",
-    "    PeftType,\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TODO\n",
-    "- add transformers to deps\n",
-    "- torch\n",
-    "- check padding situation\n",
-    "- change `evaluation_strategy` (or pass as config)\n",
-    "- pydantic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_LENGTH = 64"
+    "print(\"Testing 123\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = GPTNeoXForCausalLM.from_pretrained(\n",
-    "    \"EleutherAI/pythia-70m-deduped\",\n",
-    "    revision=\"step3000\",\n",
-    "    # cache_dir=\"./pythia-70m-deduped/step3000\",\n",
-    ")\n",
-    "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\n",
-    "    \"EleutherAI/pythia-70m-deduped\",\n",
-    "    revision=\"step3000\",\n",
-    "    # cache_dir=\"./pythia-70m-deduped/step3000\",\n",
-    "    # truncation=True,\n",
-    "    # padding=\"max_length\",\n",
-    "    # max_length=MAX_LENGTH,\n",
-    ")\n",
-    "tokenizer.add_special_tokens({\"pad_token\": \"<|padding|>\"});"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PromptTuningInit.TEXT"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "peft_config = PromptTuningConfig(\n",
-    "    task_type=TaskType.CAUSAL_LM,\n",
-    "    prompt_tuning_init=PromptTuningInit.TEXT,\n",
-    "    num_virtual_tokens=4,\n",
-    "    prompt_tuning_init_text=\" \",\n",
-    "    tokenizer_name_or_path=\"EleutherAI/pythia-70m-deduped\",\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = get_peft_model(model, peft_config)\n",
-    "model.print_trainable_parameters()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = load_dataset(\"boolq\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tokenize_function(example, tokenizer):\n",
-    "    all_text = f\"Passage:\\n{example['passage']} \\nQuestion:\\n{example['question']}\\nAnswer:\\n{example['answer']}\"\n",
-    "    return tokenizer(all_text)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\n",
-    "    tokenizer.decode(\n",
-    "        tokenize_function(dataset[\"train\"][0], tokenizer)[\"input_ids\"]\n",
-    "    )\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokenized = dataset.map(\n",
-    "    tokenize_function,\n",
-    "    fn_kwargs={\"tokenizer\": tokenizer},\n",
-    "    remove_columns=[\"question\", \"answer\", \"passage\"],\n",
-    ")\n",
-    "train_tokenized = tokenized[\"train\"].select(range(100))\n",
-    "val_tokenized = tokenized[\"validation\"].select(range(100))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_collator = DataCollatorForLanguageModeling(tokenizer, mlm=False, pad_to_multiple_of=64)\n",
-    "\n",
-    "# For debugging:\n",
-    "train_dataloader = DataLoader(\n",
-    "    train_tokenized, shuffle=True, batch_size=8, collate_fn=data_collator\n",
-    ")\n",
-    "for batch in train_dataloader:\n",
-    "    input_ids = batch[\"input_ids\"]\n",
-    "    attention_mask = batch[\"attention_mask\"]\n",
-    "    print(input_ids.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# tokenizer.decode(input_ids[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "training_args = TrainingArguments(\n",
-    "    output_dir=\"/tmp\",\n",
-    "    evaluation_strategy=\"epoch\",\n",
-    "    learning_rate=2e-5,\n",
-    "    weight_decay=0.01,\n",
-    "    num_train_epochs=2,\n",
-    "    push_to_hub=False,\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainer = Trainer(\n",
-    "    model=model,\n",
-    "    args=training_args,\n",
-    "    train_dataset=train_tokenized,\n",
-    "    eval_dataset=val_tokenized,\n",
-    "    tokenizer=tokenizer,\n",
-    "    data_collator=data_collator,\n",
-    "    #     compute_metrics=compute_metrics if training_args.do_eval and not is_torch_tpu_available() else None,\n",
-    "    #     preprocess_logits_for_metrics=preprocess_logits_for_metrics\n",
-    "    #     if training_args.do_eval and not is_torch_tpu_available()\n",
-    "    #     else None,\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainer.train()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
