--- a/data/tcr_epitope_binding/example_processing_and_templates.ipynb
+++ b/data/tcr_epitope_binding/example_processing_and_templates.ipynb
@@ -1000,7 +1000,13 @@
     "            \"description\": \"corresponding publication\",\n",
     "        },\n",
     "    ],\n",
-    "    \"split col\": \"split\",\n",
+    "    \"benchmarks\": [\n",
+    "        {\n",
+    "            \"name\": \"TDC\",\n",
+    "            \"link\": \"https://tdcommons.ai/\",\n",
+    "            \"split_column\": \"split\",\n",
+    "        },\n",
+    "    ],\n",
     "    \"num_points\": len(df),  # number of datapoints in this dataset\n",
     "    \"bibtex\": [\n",
     "        \"\"\"@article{weber2021titan,\n",
