added brackets to concat and tcr_full-> tcr_full

--- a/data/tcr_epitope_binding/example_processing_and_templates.ipynb
+++ b/data/tcr_epitope_binding/example_processing_and_templates.ipynb
@@ -78,8 +78,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading...\n",
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 16.0M/16.0M [00:04<00:00, 3.59MiB/s]\n",
+      "Found local copy...\n",
       "Loading...\n",
       "Done!\n"
      ]
@@ -113,12 +112,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 30688\r\n",
-      "drwxr-xr-x  3 cody  staff    96B Mar 18 19:44 \u001b[34mdata\u001b[m\u001b[m\r\n",
-      "-rw-r--r--  1 cody  staff    15M Mar 18 19:44 data_original.csv\r\n",
-      "-rw-r--r--  1 cody  staff    55K Mar 18 19:30 example_processing_and_templates.ipynb\r\n",
-      "-rw-r--r--  1 cody  staff   1.5K Mar 18 19:30 meta.yaml\r\n",
-      "-rw-r--r--@ 1 cody  staff   5.1K Mar 18 19:42 transform.py\r\n"
+      "total 30664\r\n",
+      "drwxr-xr-x  3 cody  staff    96B Mar 28 01:21 \u001b[34mdata\u001b[m\u001b[m\r\n",
+      "-rw-r--r--  1 cody  staff    15M Mar 28 01:22 data_original.csv\r\n",
+      "-rw-r--r--  1 cody  staff    47K Mar 28 01:18 example_processing_and_templates.ipynb\r\n",
+      "-rw-r--r--@ 1 cody  staff   5.3K Mar 28 01:18 transform.py\r\n"
      ]
     }
    ],
@@ -530,7 +528,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--  1 cody  staff    15M Mar 18 19:44 data_clean.csv\r\n"
+      "-rw-r--r--  1 cody  staff    15M Mar 28 01:23 data_clean.csv\r\n"
      ]
     }
    ],
@@ -952,10 +950,11 @@
    "source": [
     "meta = {\n",
     "    \"name\": \"tcr_epitope_binding\",  # unique identifier, we will also use this for directory names\n",
-    "    \"description\": \"\"\"T-cells are an integral part of the adaptive immune system, whose survival, proliferation, activation\n",
-    "    and function are all governed by the interaction of their T-cell receptor (TCR) with immunogenic peptides (epitopes).\n",
-    "    A large repertoire of T-cell receptors with different specificity is needed to provide protection against a wide range of pathogens.\n",
-    "    This new task aims to predict the binding affinity given a pair of TCR sequence and epitope sequence.\"\"\",\n",
+    "    \"description\": \"\"\"T-cells are an integral part of the adaptive immune system, whose survival, proliferation, \n",
+    "    activationand function are all governed by the interaction of their T-cell receptor (TCR) with immunogenic \n",
+    "    peptides (epitopes).A large repertoire of T-cell receptors with different specificity is needed to provide \n",
+    "    protection against a wide range of pathogens.This new task aims to predict the binding affinity \n",
+    "    given a pair of TCR sequence and epitope sequence.\"\"\",\n",
     "    \"targets\": [\n",
     "        {\n",
     "            \"id\": \"binding\",  # name of the column in a tabular dataset\n",
@@ -966,6 +965,8 @@
     "                \"tcr binding affinity\",\n",
     "                \"binding affinity\",\n",
     "                \"binding\",\n",
+    "                \"epitope binding affinity\",\n",
+    "                \"epitope binding\"\n",
     "\n",
     "            ],\n",
     "        },\n",
@@ -974,18 +975,24 @@
     "        {\n",
     "            \"id\": \"epitope_smiles\",  # column name\n",
     "            \"type\": \"SMILES\",  # can be \"SMILES\", \"SELFIES\", \"IUPAC\", \"OTHER\"\n",
-    "            \"description\": \"epitope smiles \",  # description (optional, except for \"OTHER\")\n",
+    "            \"description\": \"epitope smiles\",  # description (optional, except for \"OTHER\")\n",
     "        },\n",
     "        {\n",
     "            \"id\": \"epitope_aa\",\n",
-    "            \"type\": \"amino acid\",\n",
+    "            \"type\": \"Other\",\n",
     "            \"description\": \"epitope amino acid sequence\",\n",
     "\n",
     "        },\n",
     "        {\n",
+    "            \"id\": \"tcr\",\n",
+    "            \"type\": \"Other\",\n",
+    "            \"description\": \"hypervariable CDR3 loop\",\n",
+    "\n",
+    "        },\n",
+    "        {\n",
     "            \"id\": \"tcr_full\",\n",
-    "            \"type\": \"amino acid\",\n",
-    "            \"description\": \"tcr amino acid sequence\",\n",
+    "            \"type\": \"Other\",\n",
+    "            \"description\": \"tcr full amino acid sequence\",\n",
     "\n",
     "        },\n",
     "    ],\n",
@@ -1084,7 +1091,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--  1 cody  staff   1.5K Mar 18 19:44 meta.yaml\r\n"
+      "-rw-r--r--  1 cody  staff   1.7K Mar 28 01:23 meta.yaml\r\n"
      ]
     }
    ],
@@ -1105,11 +1112,12 @@
      "output_type": "stream",
      "text": [
       "name: tcr_epitope_binding\r\n",
-      "description: |-\r\n",
-      "  T-cells are an integral part of the adaptive immune system, whose survival, proliferation, activation\r\n",
-      "      and function are all governed by the interaction of their T-cell receptor (TCR) with immunogenic peptides (epitopes).\r\n",
-      "      A large repertoire of T-cell receptors with different specificity is needed to provide protection against a wide range of pathogens.\r\n",
-      "      This new task aims to predict the binding affinity given a pair of TCR sequence and epitope sequence.\r\n",
+      "description: \"T-cells are an integral part of the adaptive immune system, whose survival,\\\r\n",
+      "  \\ proliferation, \\n    activationand function are all governed by the interaction\\\r\n",
+      "  \\ of their T-cell receptor (TCR) with immunogenic \\n    peptides (epitopes).A large\\\r\n",
+      "  \\ repertoire of T-cell receptors with different specificity is needed to provide\\\r\n",
+      "  \\ \\n    protection against a wide range of pathogens.This new task aims to predict\\\r\n",
+      "  \\ the binding affinity \\n    given a pair of TCR sequence and epitope sequence.\"\r\n",
       "targets:\r\n",
       "- id: binding\r\n",
       "  description: TCR epitope binding.\r\n",
@@ -1119,23 +1127,31 @@
       "  - tcr binding affinity\r\n",
       "  - binding affinity\r\n",
       "  - binding\r\n",
+      "  - epitope binding affinity\r\n",
+      "  - epitope binding\r\n",
       "identifiers:\r\n",
       "- id: epitope_smiles\r\n",
       "  type: SMILES\r\n",
-      "  description: 'epitope smiles '\r\n",
+      "  description: epitope smiles\r\n",
       "- id: epitope_aa\r\n",
-      "  type: amino acid\r\n",
+      "  type: Other\r\n",
       "  description: epitope amino acid sequence\r\n",
+      "- id: tcr\r\n",
+      "  type: Other\r\n",
+      "  description: hypervariable CDR3 loop\r\n",
       "- id: tcr_full\r\n",
-      "  type: amino acid\r\n",
-      "  description: tcr amino acid sequence\r\n",
+      "  type: Other\r\n",
+      "  description: tcr full amino acid sequence\r\n",
       "license: CC BY 4.0\r\n",
       "links:\r\n",
       "- url: https://tdcommons.ai/multi_pred_tasks/tcrepitope/\r\n",
       "  description: original data set link\r\n",
       "- url: https://doi.org/10.1093/bioinformatics/btab294\r\n",
       "  description: corresponding publication\r\n",
-      "split col: split\r\n",
+      "benchmarks:\r\n",
+      "- name: TDC\r\n",
+      "  link: https://tdcommons.ai/\r\n",
+      "  split_column: split\r\n",
       "num_points: 47182\r\n",
       "bibtex:\r\n",
       "- |-\r\n",
@@ -1166,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "id": "9aab00fd-58a8-40b0-be30-1e269e0d323b",
    "metadata": {
     "tags": []
@@ -1178,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -1194,6 +1210,9 @@
    ],
    "source": [
     "%%writefile $path_file\n",
+    "import pandas as pd\n",
+    "import yaml\n",
+    "from tdc.multi_pred import TCREpitopeBinding \n",
     "def get_and_transform_data():\n",
     "    # get raw data\n",
     "    data = TCREpitopeBinding(name = 'weber', path = './data')\n",
@@ -1205,10 +1224,9 @@
     "    df_train['split']=\"train\"\n",
     "    df_valid['split']=\"valid\"\n",
     "    df_test['split']=\"test\"\n",
-    "    df=pd.concat(df_train,df_valid,df_test,axis=0)\n",
+    "    df=pd.concat([df_train,df_valid,df_test],axis=0)\n",
     "\n",
-    "    # create dataframe\n",
-    " not necessary but ensure we can load the saved data\n",
+    "    # create dataframenot necessary but ensure we can load the saved data\n",
     "\n",
     "    # check if fields are the same\n",
     "    fields_orig = df.columns.tolist()\n",
@@ -1216,7 +1234,7 @@
     "        \"epitope_aa\",\n",
     "        \"epitope_smi\",\n",
     "        \"tcr\",\n",
-    "        \"tcr_aa\",\n",
+    "        \"tcr_full\",\n",
     "        \"label\",\n",
     "        \"split\"\n",
     "    ]\n",
@@ -1302,7 +1320,13 @@
     "                \"description\": \"corresponding publication\",\n",
     "            },\n",
     "        ],\n",
-    "        \"split col\": \"split\"\n",
+    "        \"benchmarks\": [\n",
+    "            {\n",
+    "                \"name\": \"TDC\",\n",
+    "                \"link\": \"https://tdcommons.ai/\",\n",
+    "                \"split_column\": \"split\",\n",
+    "            },\n",
+    "        ],\n",
     "        \"num_points\": len(df),  # number of datapoints in this dataset\n",
     "        \"bibtex\": [\n",
     "            \"\"\"@article{weber2021titan,\n",
@@ -1344,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "id": "d0474f26-70f3-4655-b81a-df4ada90e7a6",
    "metadata": {
     "tags": []
@@ -1354,10 +1378,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  File \"/Users/cody/chemnlp/data/tcr_epitope_binding/transform.py\", line 15\r\n",
-      "    not necessary but ensure we can load the saved data\r\n",
-      "                                                       ^\r\n",
-      "IndentationError: unindent does not match any outer indentation level\r\n"
+      "Found local copy...\n",
+      "Loading...\n",
+      "Done!\n",
+      "Finished processing tcr_epitope_binding dataset!\n"
      ]
     }
    ],
