--- a/data/tcr_epitope_binding/example_processing_and_templates.ipynb
+++ b/data/tcr_epitope_binding/example_processing_and_templates.ipynb
@@ -996,6 +996,44 @@
     "\n",
     "        },\n",
     "    ],\n",
+    "    \"templates\": [\n",
+    "        {\n",
+    "            \"prompt\": \"Please answer the following question.\\nPredict the <expt_value_text> for <molecule>.\",\n",
+    "            \"completion\": \"<exp_value>\"\n",
+    "\n",
+    "        }\n",
+    "    ],\n",
+    "    \"fields\": [\n",
+    "        {\n",
+    "            \"exp_value\": [\n",
+    "             \"values\": [ \n",
+    "            {\n",
+    "                \"name\": \"exp_value\",\n",
+    "                \"column\": \"exp_value\",\n",
+    "                \"text\": \"binding\"\n",
+    "            }\n",
+    "            ]\n",
+    "            ],\n",
+    "            \"molecule\": [\n",
+    "            \"values\": [\n",
+    "            {\n",
+    "                \"name\": \"epitope_smiles\",\n",
+    "                \"column\": \"epitope_smiles\",\n",
+    "                \"text\": \"SMILES\"\n",
+    "\n",
+    "            },\n",
+    "            {\n",
+    "                \"name\": \"tcr_full\",\n",
+    "                \"column\": \"tcr_full\",\n",
+    "                \"text\":\n",
+    "\n",
+    "            },\n",
+    "\n",
+    "        ]\n",
+    "        ],\n",
+    "\n",
+    "        }\n",
+    "    ],\n",
     "    \"license\": \"CC BY 4.0\",  # license under which the original dataset was published\n",
     "    \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
     "        {\n",
