add comparison of model parameters

--- a/notebooks/explore_training_loss.ipynb
+++ b/notebooks/explore_training_loss.ipynb
@@ -84,6 +84,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for i, (p1,p2) in enumerate(zip(model.parameters(), peft_model.parameters())):\n",
+    "    import torch\n",
+    "    if not torch.equal(p1,p2):\n",
+    "        print(i, False)\n",
+    "    else:\n",
+    "        print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for b in dl:\n",
     "    token_types = b.pop('token_type_ids')\n",
     "    break"
@@ -117,43 +131,6 @@
    "source": [
     "all([p.requires_grad for p in model.parameters()]), all([p.requires_grad for p in peft_model.parameters()])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
