feat: add HF tokenizer installation with pip.

--- a/notebooks/huggingface_tokenizer.ipynb
+++ b/notebooks/huggingface_tokenizer.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7d4ff501-0ba7-41b6-8126-b29155ca7b54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install tokenizers"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "daffceb5-7bf6-40ce-b1e8-d6ef7a5ebce5",
    "metadata": {
